--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus dolores, ipsam accusantium, sint reiciendis natus vitae commodi incidunt, dolorum nemo. Repellat ipsam odio, quia voluptate sapiente molestiae alias magni?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nisi dolores totam iste accusantium! Saepe fuga recusandae ut ea deserunt omnis repellat quidem eligendi pariatur, repellendus eveniet numquam error id.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rerum, consequuntur possimus praesentium nostrum minus laudantium corporis reprehenderit ipsa obcaecati autem qui, dolore explicabo, quia sunt. Earum quis ullam reiciendis.</p>
+    <img src="img/Shrek.png" alt="shrek">
 </body>
 </html>
